# mcp-server-demo

./: .dockerignore  .gitignore  CURRENT_CONFIG.template.md  Dockerfile  README.md  SETUP_GUIDE.md  automated_setup.py  debug_mcp_setup.py  iOS_MCP_SETUP.md  ios_mcp_server.py  pyproject.toml  railway.json  railway.toml  requirements.txt  start_ios_mcp.sh  start_mcp_server.sh  test_doc_retrival_agent.py  test_ios_mcp.sh
.continue/: config.json
ios_mcp_server/: .dockerignore  DEPLOYMENT_STRATEGY.md  Dockerfile  Procfile  RAILWAY_DEPLOYMENT_GUIDE.md  README.md  __init__.py  fastmcp_server.py  main.py  nixpacks.toml  pyproject.toml  railway.json  railway.toml  requirements.txt  setup.py  test_railway_deployment.py
ios_mcp_server/automation/: appium_client.py  screenshot_service.py  simulator_manager.py
ios_mcp_server/config/: __init__.py  settings.py
ios_mcp_server/ios_mcp_server/: Dockerfile
ios_mcp_server/server/: mcp_server.py
ios_mcp_server/shared/config/: __init__.py  base_settings.py
ios_mcp_server/shared/utils/: __init__.py  exceptions.py  logger.py
ios_mcp_server/tools/: appium_tap_type_tool.py  base_tool.py  find_and_tap_tool.py  launch_app_tool.py  screenshot_tool.py  tool_registry.py
ios_mcp_server/tools/ios/: __init__.py  appium_tap_type_tool.py  find_and_tap_tool.py  launch_app_tool.py  screenshot_tool.py
ios_mcp_server/utils/: command_runner.py  exceptions.py  logger.py
mobile-automation-mcp-server/: .dockerignore  Procfile  fastmcp_server.py  pyproject.toml
mobile-automation-mcp-server/config/: __init__.py  settings.py
mobile-automation-mcp-server/shared/: __init__.py
mobile-automation-mcp-server/shared/utils/: command_runner.py  logger.py
shared/: __init__.py
vercel-deployment/: .gitignore  README.md  next.config.js  package-lock.json  package.json  postcss.config.js  stdio-server.js  tailwind.config.js  vercel.json
vercel-deployment/app/: globals.css  layout.tsx  page.tsx
vercel-deployment/app/api/mcp/: route.ts
vercel-deployment/app/mcp/: route.ts
