[project]
name = "mobile-automation-mcp-server"
version = "1.0.0"
description = "Modern iOS automation server built with FastMCP 2.0"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.2",
    "starlette>=0.27.0", 
    "uvicorn>=0.23.0",
    "mcp>=1.0.0",
    "aiohttp>=3.9.0",
    "appium-python-client>=3.0.0",
    "selenium>=4.15.0",
    "pillow>=10.0.0", 
    "requests>=2.31.0",
    "pydantic>=2.4.0",
    "pydantic-settings>=2.0.0",
]